# rouge

./: CONFLICT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
doc/: index.md
doc/book/: 1_intro.md
docs/: index.md
docs/book/: 0_intro.md  1_start.md  2_types.md  3_variables.md  4_flow.md  5_functions.md  6_structs.md  7_enums.md  8_projects.md  book.toml
docs/spec/: index.md
docs/spec/1_language/: 0_overview.md  1_tokens.md
examples/: custom_types.rg  files.ro  functions.rg  functions.ro  functions.rouge  hello.rg  hello.ro  hello.rouge  max_nesting.ro  max_nesting.rouge
examples/euler/: euler1.rg  euler1.ro  euler1.rouge  euler14.ro  euler14.rouge  euler2.rg  euler2.ro  euler2.rouge  euler7.rg  euler7.ro  euler7.rouge
src/: lib.rs  main.rs
src/compiler/: lexer.rs  mod.rs  scanner.rs
src/compiler/parser/: ast.rs  cst.rs  cstgen.rs  lex.rs  mod.rs  scan.rs
src/interpreter/: lexer.rs  mod.rs
src/interpreter/parser/: cstgen.rs  mod.rs
src/runtime/: code_parser.rs  lexer.rs  mod.rs
std/: cmp.rg  cmp.ro  cmp.rouge  collections.ro  collections.rouge  default.ro  fs.ro  io.ro  iter.ro  lib.rg  lib.ro  lib.rouge  num.rg  num.rouge  ops.rg  ops.ro  ops.rouge  string.ro  string.rouge  text.ro  util.rouge
std/collections/: collections.ro
std/data/: data.ro  json.ro
std/error/: error.ro  option.ro  result.ro
std/io/: io.ro  sync.ro
std/iter/: adapters.ro  iter.ro
std/num/: num.ro
std/ops/: cmp.ro  ops.ro  range.ro  special.ro
std/sync/: io.ro
std/terminal/: terminal.ro
std/text/: text.ro
