[package]
name = "rouge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codespan-reporting = { version = "0.11" }
logos = { version = "0.14" }
read_chars = { version = "0.3" }
unicode-properties = { version = "0.1" }
unicode-ident = { version = "1.0" }